# mlua-lint

./: .gitignore  README.md  pyproject.toml
src/mlua_lint/: __main__.py  cli.py  errors.py  finder.py  lsp_client.py  normalize.py  transport.py
tests/: test_cli_utils.py  test_finder.py  test_lsp_client_integration.py  test_normalize.py
tests/helpers/: fake_lsp_server.py
